@@ -1,3 +1,4 @@
+* Add grouped attribute to data tag
 * Store selection tree state
 * Add order to Action Window
 * Add factor on number fields
